# htmx_demo

./: Makefile  README.md  manage.sh  pyproject.toml
htmx_demo/: admin.py  apps.py  asgi.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
htmx_demo/migrations/: 0001_initial.py
htmx_demo/templates/: active_user_tasks.html
htmx_demo/templates/admin/: base_site.html
htmx_demo/templatetags/: live_messages.py
